[package]
name = "tag_db"
version = "0.3.8"
authors = ["coco <coco@hexgolems.com>"]

description = "Using interval trees to create a simple interval database"

# These URLs point to more information about the repository
#documentation = "..."
#homepage = "https://github.com/ranmrdrakono/interval_tree"
#repository = "..."

keywords = ["interval","range","spatial","database","db"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "GPL-2.0"

#rand = "*" # Or a specific version
#time = "*"

[dependencies.interval_tree]
git = "https://github.com/eqv/interval_tree"

[dependencies]
rmp = "0.7.3"

#[lib]
#name = "tag_db"
#crate-type = ["dylib"]
