[package]
name = "theban_db"
version = "0.5.2"
authors = ["coco <coco@hexgolems.com>"]

description = "Using interval trees to create a simple interval database"

# These URLs point to more information about the repository
#documentation = "..."
repository = "https://github.com/theban/db"

keywords = ["interval","range","spatial","database","db"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license-file = "LICENSE"

[dependencies]
rmp = "0.7.3"
memrange = "0.1.*"
theban_interval_tree = "0.7.*"
